[package]
name = "smallvec-map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { optional = true, version = "1.0" }
serde_with = { optional = true , version = "2.0" }
smallvec = { version = "1.10.0", features = ["const_generics", "const_new"] }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["serde", "serde_with"]
serde = ["dep:serde"]
serde_derive = ["serde/derive"]
serde_with = ["dep:serde_with","dep:serde"]

[[example]]
name = "json_dict"
required-features = ["serde", "serde_with", "serde_derive"]